Updated with latest figure 1, supplementary figure 1 and 2 results

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ scipy>=1.7.0
 scikit-learn>=1.0.0
 matplotlib>=3.4.0
 pytest>=6.0.0
-torch>=1.9.0  # Optional, for GPU acceleration 
+torch>=1.9.0  # necessary now that we're using GPU
