--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "qgml"
 version = "0.1.0"
-description = "Quantum Computing and Machine Learning Library"
+description = "Quantum Geometric Machine Learning Library (demo)"
 requires-python = ">=3.7"
 dependencies = [
-    "numpy",
-    "scipy",
-    "scikit-learn",
-    "matplotlib",
-] 
+    "numpy>=1.20.0",
+    "scikit-learn>=1.0.0",
+    "matplotlib>=3.4.0",
+    "torch>=1.9.0",
+]
+
+[project.optional-dependencies]
+test = ["pytest>=6.0.0"] 
