--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,13 @@
-# Python
+# QGML - Quantum Geometric Machine Learning
+# .gitignore file
+
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+# C extensions
 *.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Python executables
-*.exe
-*.pyc
-*.pyd
-*.pyo
-*.pyw
-*.pyz
-*.pyzw
-
-# Virtual Environment
-venv/
-env/
-ENV/
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# Logs
-*.log
-
-# Local development
-.env
-.env.local
 
 # Distribution / packaging
 .Python
@@ -64,6 +23,212 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
-*.egg 
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+docs/build/
+_build/
+docs/_static/
+docs/_images/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# QGML Specific
+# Experimental results and temporary files
+experiments/backend_comparison/results/
+*.npy
+*.pkl
+*.h5
+*.hdf5
+
+# Cleanup scripts (not part of the main codebase)
+check_emojis.py
+clean_remaining_emojis.py
+remove_all_emojis.py
+
+# Package manager files
+uv.lock
+*.lock
+
+# Virtual environments
+qgml_env/
+
+# Model checkpoints and weights
+checkpoints/
+models/
+weights/
+*.pth
+*.pt
+*.ckpt
+
+# Temporary test files and reports
+*_test_report.md
+migration_test_report.md
+test_output.txt
+
+# Data files
+data/
+datasets/
+*.csv
+*.json
+*.mat
+
+# Plots and figures (unless specifically needed)
+plots/
+figures/
+*.png
+*.jpg
+*.jpeg
+*.pdf
+*.eps
+*.svg
+
+# LaTeX intermediate files
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.synctex.gz
+*.toc
+
+# Quantum computing specific
+qiskit.log
+*.qobj
+*.qpy
+
+# JAX/PyTorch cache
+.jax_cache/
+torch_cache/
+
+# Weights and Biases
+wandb/
+
+# MLflow
+mlruns/
+mlflow.db
+
+# CUDA cache
+*.cubin
+*.fatbin
+*.ptx
