--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "torch>=2.0.0",
     "scikit-learn>=1.3.0",
     "pytest>=8.4.2",
+    "seaborn>=0.13.2",
 ]
 
 [project.optional-dependencies]
