--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,31 @@
-numpy>=1.20.0
+# QGML Core Dependencies
+# For optional dependencies (JAX backend, dev tools), use:
+#   pip install -e .[jax]     # For JAX backend
+#   pip install -e .[dev]     # For development tools
+#   pip install -e .[full]    # For all optional features
+
+# Core dependencies
+numpy>=1.21.0
 scipy>=1.7.0
-scikit-learn>=1.0.0
-matplotlib>=3.4.0
-pytest>=6.0.0
-torch>=1.9.0  # necessary now that we're using GPU
+matplotlib>=3.5.0
+seaborn>=0.11.0
+
+# Default backend (PyTorch)
+torch>=2.0.0
+torchvision>=0.15.0
+
+# Scientific computing
+scikit-learn>=1.3.0
+pandas>=1.5.0
+
+# Visualization
+plotly>=5.0.0
+ipywidgets>=8.0.0
+
+# Documentation
+sphinx>=7.0.0
+sphinx-rtd-theme>=3.0.0
+myst-parser>=3.0.0
+
+# Testing (minimal - use [dev] extra for full dev tools)
+pytest>=7.0.0
