Implement initial QRC analysis example
Add qrc_analysis_example.py demonstrating QGML integration with Quera QRC

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -50,7 +50,7 @@ check:
 
 # Generate API documentation from source code
 apidoc:
-	sphinx-apidoc -f -o api/ ../qcml/
+	sphinx-apidoc -f -o api/ ../qgml/
 
 # Full documentation pipeline
 all: clean install-deps apidoc html pdf
